[package]
name = "captacao-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-emitter-rs = "0.1.4"
futures = "0.3.26"
lazy_static = "1.4.0"
playwright = "0.0.20"
serde = "1.0.156"
serde_json = "1.0.94"
tokio = "1.25.0"
